// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cron island > keeps its rendered shape, job page 1`] = `
"div.two-pane
  div.two-pane-side
    div.two-pane-find
      div.two-pane-search
        svg
          circle
          path
        input
      button.two-pane-add
        svg
          path
    div.two-pane-list
      div.two-pane-grp
      div.two-pane-row
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds.bad
        button.two-pane-swi
  div.two-pane-main
    div.two-pane-head
      div.ttl
        div.nm
        div.two-pane-meta
          span
          span.st.ok
      button.two-pane-swi
    div.two-pane-sec
      div.two-pane-lab
        span.two-pane-sp
      input.cronname
    div.two-pane-sec
      div.two-pane-lab
        span.two-pane-sp
      div.cronwhen
        span.selw
          select.sel
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
        span.selw
          select.sel
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
        span.selw
          select.sel
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
            option
    div.two-pane-sec
      div.two-pane-lab
        span.two-pane-sp
      textarea.cronsay
    div.two-pane-sec
      div.two-pane-lab
        span.two-pane-sp
      div.cronruns
        div.dnote
    div.two-pane-foot
      div.two-pane-in
        button.mini
        button.mini.ghost
        span.two-pane-sp
        button.mini.ghost.danger"
`;

exports[`cron island > keeps its rendered shape, list 1`] = `
"div.two-pane
  div.two-pane-side
    div.two-pane-find
      div.two-pane-search
        svg
          circle
          path
        input
      button.two-pane-add
        svg
          path
    div.two-pane-list
      div.two-pane-grp
      div.two-pane-row
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds.bad
        button.two-pane-swi
      div.two-pane-row
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds
        button.two-pane-swi
      div.two-pane-grp
      div.two-pane-row.two-pane-off
        button.two-pane-hit
          span.two-pane-txt
            span.nm
            span.ds
        button.two-pane-swi
  div.two-pane-main
    div.two-pane-none"
`;
